# inventory

./: .gitignore  Caddyfile  README.md  package.json  pyproject.toml  setup.cfg  update-js.sh
.github/workflows/: main.yml
interface/: __init__.py  admin.py  fields.py  forms.py  models.py  urls.py  validators.py  views.py
interface/migrations/: 0001_initial.py  0002_packaging_product.py  0003_auto_20190929_1041.py  0004_auto_20190929_1047.py  0005_auto_20191008_0841.py  0006_auto_20191020_0942.py  0007_auto_20191020_1248.py  0008_auto_20191020_1254.py  0009_delete_brandean.py
interface/static/css/: quagga.css
interface/static/js/: quagga.js  quagga.min.js  reader.js
interface/templates/: base.html
interface/templates/app/: base.html  bootstrap.html
interface/templates/interface/: brand_form.html  brandean_form.html  index.html  packaging_form.html  packaging_view.html  scanned_item.html  select_product.html
interface/templates/registration/: login.html
inventory/: settings.py  urls.py
